# 22CS13-SigilHive

./: .gitignore  ARCHITECTURE_SUMMARY.md  LANGGRAPH_ARCHITECTURE.md  MCP_TOOL_CALLS.md  QUICK_START.md  README.md  REAL_ATTACKS_SETUP.md  grafana_reference.json
SigilHive/: .dockerignore  .env  .env.example  DATABASE_HONEYPOT_FIX.md  DEPLOYMENT_GUIDE.md  Dockerfile  MONITORING_SETUP_COMPLETE.md  ORCHESTRATOR_INTEGRATION.py  TASKS_1_4_COMPLETION_REPORT.md  data_pipeline_verification.md  deploy_grafana.py  deploy_grafana_via_mcp.py  docker-compose.yaml  docker-compose.yml  file_structure.py  grafana_alert_rules.json  grafana_alerts.json  grafana_annotations.json  grafana_automation.py  grafana_comprehensive_dashboard.json  grafana_config.py  grafana_dashboard.json  grafana_incidents.json  kafka_config.json  kafka_manager.py  llm_cache.json  prompts.py  pyproject.toml  requirements.txt  sequential_attack_runner.py  shophub_db_cache.json  ssh_host_key  ssh_host_key.pub  start_metrics_service.py  test_prometheus.py  test_real_attacks.py  validate_enhanced_rl.py
SigilHive/adversarial_training/: Dockerfile  adversarial_agent.py  app_integration.py  attack_scheduler.py  enhanced_agent.py  file_structure_evolver.py  init.py  langgraph_integration.py  metrics_service.py  orchestrator.py  real_attacks.py  requirements.txt  result_storage.py  training_integration.py
SigilHive/attack_results/: cycle_0001_1772963195.json  cycle_0001_1772963940.json  cycle_0001_1772964297.json  cycle_0001_1772966806.json  cycle_0002_1772963270.json  cycle_0002_1772964024.json  (+6 more)
k8s/kafka/: kafka.yaml
(+69 files in other folders)
