[project]
name = "sigilhive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncssh>=2.21.1",
    "colorama>=0.4.6",
    "confluent-kafka>=2.12.2",
    "httpie>=3.2.4",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "numpy>=2.3.3",
    "paramiko>=4.0.0",
    "python-dotenv>=1.1.1",
]
